fix(v-badge): increase badge size and border radius
Readds changes made in dac06f5e4f7d84e2fbdd0ba33acb2b7b43e6868b, but broken in
59e8f5ee0aa4ebd8867f8dc1e51c27408679f861 (most likely). Badge border radius is an interim fix while
waiting for vuetifyjs/vuetify#13296

--- a/assets/_sizes.scss
+++ b/assets/_sizes.scss
@@ -2,8 +2,9 @@
 //       If you're changing it, change it there too.
 $systembar-height: 24px;
 
-$badge-dot-width: 11px;
+$badge-dot-border-width: 2.5px;
+$badge-dot-width: 12px;
 $badge-dot-height: $badge-dot-width;
-$badge-dot-border-radius: $badge-dot-width;
+$badge-dot-border-radius: 100% !important;
 
 $chat-search-results-width: 400px;
